@@ -41,7 +41,7 @@ SFUN =  agreg.fit.R \
 	survfitcoxph.fit.R \
 	survfitms.R\
 	tmerge.R \
-	yates.R
+#	yates.R
 
 CFUN =  agsurv4.c agsurv5.c concordance1.c coxcount1.c \
 	agfit4.c \
