@@ -1,34 +1,0 @@
-
-R version 2.11.0 (2010-04-22)
-Copyright (C) 2010 The R Foundation for Statistical Computing
-ISBN 3-900051-07-0
-
-R is free software and comes with ABSOLUTELY NO WARRANTY.
-You are welcome to redistribute it under certain conditions.
-Type 'license()' or 'licence()' for distribution details.
-
-R is a collaborative project with many contributors.
-Type 'contributors()' for more information and
-'citation()' on how to cite R or R packages in publications.
-
-Type 'demo()' for some demos, 'help()' for on-line help, or
-'help.start()' for an HTML browser interface to help.
-Type 'q()' to quit R.
-
-> library(survival)
-Loading required package: splines
-> #
-> # Survival curves could fail with data that was almost exact.
-> #  The calculations use both unique() and table(), which don't 
-> #  necessarily give the same number of values.
-> # Check that the routine handles this properly
-> #  
-> 
-> tdata <- data.frame(time=c(1,2, sqrt(2)^2, 2, sqrt(2)^2),
-+                     status=rep(1,5), 
-+                     group=c(1,1,1,2,2))
-> fit <- survfit(Surv(time, status) ~ group, data=tdata)
-> 
-> all.equal(sum(fit$strata), length(fit$time))
-[1] TRUE
-> 
